# efs_fast

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
src/efs_fast/: __init__.py  core.c
